desloppify: reduce API surface complexity and eliminate dead code
- ExploreResponseAssembler: introduce ExamplesContext record to reduce
  buildExamplesResponse from 7 bare parameters to (context, results)
- ExploreResponseAssembler: remove dead collocateResultToFullMap and
  edgeToMap methods (no production callers)
- HttpApiUtils.parseQueryParams: use StandardCharsets.UTF_8 charset
  overload to eliminate impossible UnsupportedEncodingException catch
- Update callers (ExplorationHandlers, ConcordanceHandlers) to use ExamplesContext
- Remove edgeToMap test; restore accidentally-dropped imports in test

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>